<?xml version="1.0"?>
<package>
  <name>person_sim</name>
  <version>0.0.0</version>
  <description>The person_sim package</description>

  <maintainer email="user@todo.todo">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>spawn_robot_tools_pkg</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>spawn_robot_tools_pkg</run_depend>
  
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
