<?xml version="1.0"?>
<package>
  <name>fetch_domain_randomization</name>
  <version>0.0.0</version>
  <description>The fetch_domain_randomization package</description>

  <maintainer email="rdaneel@todo.todo">rdaneel</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>fetch_gazebo</build_depend>
  <build_depend>spawn_robot_tools_pkg</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>fetch_gazebo</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>spawn_robot_tools_pkg</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
